Update swagger config files with new host and schemes
